--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 <body>
 
 <div class="jumbotron bgc-gray2">
-	<center><h1 class="c-white">Genre Regen</h1></center>
+	<center>
+	<h1 class="c-white">Genre Regen</h1>
+	<span class="c-gray">Summarize and send your suggestions of missing genre/prefix/affix/feel/type to (Discord) .Ayrlin#2271 or (Email) ayrlin.renata@gmail.com</span>
+	</center>
 </div>
 
 <div class="container">
