--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class="jumbotron bgc-gray2">
 	<center>
 	<h1 class="c-white">Genre Regen</h1>
-	<span class="c-gray">Summarize and send your suggestions of missing genre/prefix/affix/feel/type to (Discord) .Ayrlin#2271 or (Email) ayrlin.renata@gmail.com</span>
+	<span class="c-gray">Suggestions and bugfixes: (Discord) .Ayrlin#2271 or (Email) ayrlin.renata@gmail.com</span>
 	</center>
 </div>
 
