--- a/index.html
+++ b/index.html
@@ -21,14 +21,43 @@
 </div>
 
 <div class="container">
-	<div class="col">
-		<div class="row">
+	<div class="row">
+		<div class="col col-12">
 			<div class="input-group">
 				<input id="out" type="text" class="form-control">
 				<div class="input-group-append">
 					<button class="btn" onclick="randomizer();">Randomize</button>	
+					<button class="btn" onclick="copy();">Copy</button>	
 				</div>
 			</div>
+		</div>
+		<div class="col col-12 bgc-gray2 mt-4 pt-3">
+			<div class="input-group">
+				<div class="input-group-prepend">
+					<span class="input-group-text">Genre Mix</span>	
+					<span class="input-group-text">Min</span>	
+				</div>
+				<input id="min" type="number" min="1" max="16" value="2" step="1" class="form-control" onchange="minCall();">
+				<div class="input-group-prepend">
+					<span class="input-group-text">Max</span>
+				</div>				
+				<input id="max" type="number" min="1" max="16" value="3" step="1" class="form-control" onchange="maxCall();">
+			</div>
+		</div>
+		<div id="tabdiv" class="col col-12 bgc-gray2 pt-4">
+			<table id="pooldata" class="table tbody-scroll">
+				<thead>
+					<tr>
+						<th>prefix</th>
+						<th>genre</th>
+						<th>affix</th>
+						<th>feel</th>
+						<th>type</th>
+					</tr>
+				</thead>
+				<tbody>
+				</tbody>
+			</table>
 		</div>
 	</div>
 </div>
