--- a/index.html
+++ b/index.html
@@ -26,12 +26,19 @@
 			<div class="input-group">
 				<input id="out" type="text" class="form-control">
 				<div class="input-group-append">
-					<button class="btn" onclick="randomizer();">Randomize</button>	
+					<button class="btn" onclick="randomizer();">Generate</button>	
 					<button class="btn" onclick="copy();">Copy</button>	
 				</div>
 			</div>
 		</div>
-		<div class="col col-12 bgc-gray2 mt-4 pt-3">
+		<div class="col col-12 mt-3">
+			<table id="history" class="table tbody-scroll">
+				<tbody>
+					
+				</tbody>
+			</table>
+		</div>
+		<div class="col col-12 bgc-gray2 mt-3 pt-3">
 			<div class="input-group">
 				<div class="input-group-prepend">
 					<span class="input-group-text">Genre Mix</span>	
